syntax = "proto3";

package envoy.extensions.filters.http.ext_proc.unit_test_fuzz;

import "envoy/extensions/filters/http/ext_proc/v3/ext_proc.proto";
import "envoy/service/ext_proc/v3/external_processor.proto";
import "test/fuzz/common.proto";
import "buf/validate/validate.proto";

// We only fuzz a single request per iteration.
message ExtProcUnitTestCase {
  envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor config = 1
      [(buf.validate.field).required = true];
  // HTTP request data.
  test.fuzz.HttpData request = 2 [(buf.validate.field).required = true];
  // ext_proc service response.
  envoy.service.ext_proc.v3.ProcessingResponse response = 3
      [(buf.validate.field).required = true];
}
